# packages/tools/openapi/openapi_schema.json
@@ -100,6 +100,45 @@
                 }
             }
         },
+        "/static_api/exercises/upload": {
+            "post": {
+                "summary": "Upload Exercise",
+                "operationId": "upload_exercise_static_api_exercises_upload_post",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/ExerciseModel"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "title": "Response Upload Exercise Static Api Exercises Upload Post"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HTTPValidationError"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/new-session-router/list-sessions": {
             "get": {
                 "summary": "List Sessions",
